--- a/pelitaProject/kasir/templates/kasir/index.html
+++ b/pelitaProject/kasir/templates/kasir/index.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="text-center">
-    <img src="{% static 'img/logo1.png' %}" alt="Logo" class="logo mb-3 rounded-circle">
+    <img src="{% static 'kasir/img/logo1.png' %}" alt="Logo" class="logo mb-3 rounded-circle">
     <h4 class="fw-bold">PELITAKAS</h4>
     <p class="text-muted mb-4">Login untuk mengakses sistem kasir</p>
   
