--- a/pelitaProject/portfolio/templates/portofolio/index.html
+++ b/pelitaProject/portfolio/templates/portofolio/index.html
@@ -33,7 +33,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="{% static 'assets/img/logo1-removebg-preview.png' %}" alt="">
+        <img src="{% static 'portfolio/assets/img/logo1-removebg-preview.png' %}" alt="">
         <h1 class="sitename">UD.PELITA</h1>
       </a>
 
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="{% static 'assets/img/Gambar.png' %}" class="img-fluid animated" alt="">
+            <img src="{% static 'portfolio/assets/img/Gambar.png' %}" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 position-relative order-lg-last" data-aos="fade-up" data-aos-delay="0">
-            <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'portfolio/assets/img/about.jpg' %}" class="img-fluid" alt="">
             <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
           </div>
 
@@ -213,7 +213,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="{% static 'assets/img/5ed8d19e24b74.jpg' %}" class="img-fluid" alt="">
+                <img src="{% static 'portfolio/assets/img/5ed8d19e24b74.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -230,7 +230,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="{% static 'assets/img/pt-pupuk-kalimantan-timur-pupuk-kaltim-melalui-loyalty-progr-uhp4.jpg' %}" class="img-fluid" alt="">
+                <img src="{% static 'portfolio/assets/img/pt-pupuk-kalimantan-timur-pupuk-kaltim-melalui-loyalty-progr-uhp4.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -247,7 +247,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="{% static 'assets/img/feedstuff.jpg' %}" class="img-fluid" alt="">
+                <img src="{% static 'portfolio/assets/img/feedstuff.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -336,7 +336,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
-            <img src="{% static 'assets/img/antarafoto-realisasi-penyaluran-pupuk-subsidi-di-aceh-310723-syf-6_ratio-16x9.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'portfolio/assets/img/antarafoto-realisasi-penyaluran-pupuk-subsidi-di-aceh-310723-syf-6_ratio-16x9.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
             <h3> Akses Produk Subsidi Langsung</h3>
@@ -354,7 +354,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="{% static 'assets/img/02-18-750x450.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'portfolio/assets/img/02-18-750x450.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
             <h3>Layanan Konsultasi Gratis</h3>
@@ -369,7 +369,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
-            <img src="{% static 'assets/img/04102024_pakan_Ternak.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'portfolio/assets/img/04102024_pakan_Ternak.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7" data-aos="fade-up">
             <h3>Produk Lengkap dan Terjamin</h3>
@@ -385,7 +385,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
-            <img src="{% static 'assets/img/istockphoto-1323264565-170667a.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'portfolio/assets/img/istockphoto-1323264565-170667a.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
             <h3>Kemitraan Jangka Panjang untuk Petani & Peternak</h3>
@@ -530,7 +530,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="portfolio/assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -548,7 +548,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="portfolio/assets/img/team/team-4.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
