--- a/pelitaProject/portfolio/templates/portofolio/index.html
+++ b/pelitaProject/portfolio/templates/portofolio/index.html
@@ -31,7 +31,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="#" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="{% static 'portfolio/assets/img/logo1-removebg-preview.png' %}" alt="">
         <h1 class="sitename">UD.PELITA</h1>
