--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-8 mb-4">
                         <h5>Katalog Produk</h5>
-                        <input type="text" class="form-control mb-3" placeholder="Cari produk...">
+                        <input type="text" id="searchProduct" class="form-control mb-3" placeholder="Cari produk...">
     
                         <div class="row" id="product-list">
                             <!-- Product Cards will be injected here -->
